11-02: mise à jour en cours de rédaction

--- a/04-Sigles_Abrev.tex
+++ b/04-Sigles_Abrev.tex
@@ -16,25 +16,35 @@
   \acro{TC}{Transport en Commun}
   \acro{PLUTO}{Primary Land Use Tax Lot Output}
   \acro{IoU}{Intersection over Union}
-  \acro{nIoU}{mean Intersection over Union}
+  \acro{mIoU}{mean Intersection over Union}
   \acro{ReLu}{Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}}
   \acro{OQLF}{Office Québecois de la Langue Française}
   \acro{CDS}{Coefficient de Dice Sorensen}
   \acro{CUBF}{Code d'Utilisation du Bien Fond}
+  \acro{RST}{RegulationSetTerritory ou ensemble de règlements de territoire}
+  \acro{PR}{ParkingRegulation ou règlement de stationnement}
+  \acro{PRS}{ParkingRegulationSet ou ensemble de règlement}
+  \acro{TD}{TaxDataset ou ensemble de données foncières}
+  \acro{PI}{ParkingInventory ou inventaire de stationnement}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
-SIG        & Système d'Information Géographique\\
-GPS        & Global Positionning System\\
-CNN		   & Convolutionnal Neural Networks \\
-OSM     & OpenStreetMap \\
-TC      & Transport en Commun \\
-PLUTO   & Primary Land Use Tax Lot Output \\
-IoU & Intersection over Union ou indice de Jaccard\\
-mIoU & mean Intersection over Union ou indice de Jaccard moyen\\
-ReLu & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}\\
-OQLF & Office Québecois de la Langue Française\\
-CDS & Coefficient de Dice Sorensen \\
-CUBF & Code d'Utilisation des Biens-Fonds \\
+SIG     & Système d'Information Géographique                                    \\
+GPS     & Global Positionning System                                            \\
+CNN		& Convolutionnal Neural Networks                                        \\
+OSM     & OpenStreetMap                                                         \\
+TC      & Transport en Commun                                                   \\
+PLUTO   & Primary Land Use Tax Lot Output                                       \\
+IoU     & Intersection over Union ou indice de Jaccard                          \\
+mIoU    & mean Intersection over Union ou indice de Jaccard moyen               \\
+ReLu    & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}   \\
+OQLF    & Office Québecois de la Langue Française                               \\
+CDS     & Coefficient de Dice Sorensen                                          \\
+CUBF    & Code d'Utilisation des Biens-Fonds                                    \\
+RST     & RegulationSetTerritory ou Ensembles de Règlements de Territoire       \\
+PR      & ParkingRegulation ou Règlement de stationnment                        \\
+PRS     & ParkingRegulationSet ou Ensemble de Règlements de Stationnement       \\
+TD      & TaxDataset ou Ensemble de données foncières                           \\
+
 \end{longtable}
 
