--- a/05-Introduction.tex
+++ b/05-Introduction.tex
@@ -10,11 +10,11 @@
 
 \Chapter{INTRODUCTION}\label{sec:Introduction}  % 10-12 lignes pour introduire le sujet.
 
-Les requis d'entreposage sont une partie intégrante des coûts associés à différents modes de transports. La deuxième moitié du 20\textsuperscript{ième} siècle a vu une augmentation marquée de l'automobile, dont l'entreposage est très gourmand en espace. Pour la plupart des juridictions, la solution fut le développement des requis de stationnement minimum. Ces requis avaient pour but de faire internaliser aux développeurs, habitants, commerçants et employeurs les coûts associés à la mise à disposition d'entreposage pour moyen de transports de leurs visiteurs, plutôt que de demander au contribuable de directement payer pour un stationnement publique \parencite{Shoup:HighCost:2005}.\par
+Les requis d'entreposage sont une partie intégrante des coûts associés à différents modes de transport. La deuxième moitié du 20\textsuperscript{ième} siècle a vu une augmentation marquée de l'utilisation de l'automobile, dont l'entreposage est très gourmand en espace. Pour la plupart des juridictions, la solution fut le développement des requis minimums de stationnement. Ces requis avaient pour but de faire internaliser aux développeurs, habitants, commerçants et employeurs les coûts associés à la mise à disposition d'entreposage pour le moyen de transport de leurs visiteurs, plutôt que de demander au contribuable de directement payer pour un stationnement public \parencite{shoup_high_2005}.\par
 
-Cette rationnelle bien intentionnée a eu de nombreuses conséquences malencontreuses. En essayant de rendre le stationnement gratuit et disponible en tout point, la plupart des juridictions Nord-Américaines ont créé entre 2 et 14 places de stationnement pour chaque automobile \parencite{Scharnhorst:QuantifiedParking:2018}. Cette offre de stationnement abondante et gratuite à l'utilisation constitue une subvention chiffrée aux alentours de 5000\$ par année-véhicule \parencite{Litman:ComprehensiveParking:2023} payés sous forme de loyers,  de biens et services et de dommages environnementaux.\par
+Cette rationnelle bien intentionnée a eu de nombreuses conséquences malencontreuses. En essayant de rendre le stationnement gratuit et disponible en tout point, la plupart des juridictions nord-américaines ont créé entre 2 et 14 places de stationnement pour chaque automobile \parencite{scharnhorst_quantified_2018}. Cette offre de stationnement abondante et gratuite à l'utilisation constitue une subvention chiffrée aux alentours de 5000\$ par année-véhicule \parencite{litman_comprehensive_2023} payée sous forme de loyers,  de biens et services et de dommages environnementaux.\par
 
-Malgré ces coûts élevés, il n'existe pas d'inventaire complet des places de stationnements pour les municipalités québecoises, constituant un frein autant à la compréhension des enjeux qu'à l'établissement de politiques chiffrées permettant de mieux arbitrer les besoins d'entreposage de véhicules privés avec d'autres objectifs sociétaux comme la réduction des coûts totaux de transport, l'équité et la réduction des émissions de gaz à effet de serre. \par
+Malgré ces coûts élevés, il n'existe pas d'inventaire complet des places de stationnements pour les municipalités québécoises, constituant un frein autant à la compréhension des enjeux qu'à l'établissement de politiques chiffrées permettant de mieux arbitrer les besoins d'entreposage de véhicules privés avec d'autres objectifs sociétaux comme la réduction des coûts totaux de transport, l'équité et la réduction des émissions de gaz à effet de serre. \par
 
 
 
@@ -56,29 +56,29 @@ Malgré ces coûts élevés, il n'existe pas d'inventaire complet des places de 
 %% ELEMENTS DE LA PROBLEMATIQUE
 %%
 \section{Éléments de la problématique}\label{sec:Problematique}  % environ 3 pages
-La ville de Québec est en voie de se doter d'une politique de stationnement, une étape franchie pour la ville de Montréal en 2016 \parencite{VilledeMontreal:PolitiqueStationnement:2016}. Cela étant dit, il n'existe à l'heure actuelle pas d'inventaire de la quantité de stationnement disponible, de sa tarification et de la variation temporelle de cette offre. Cette section présentera certains des enjeux reliés à la mise en place d'un tel inventaire et reprend des éléments de \parencite{Bourdeau:MethodologieAnalyse:2014} qui a tenté un inventaire similaire pour la région de Montréal.\par
+La ville de Québec est en voie de se doter d'une politique de stationnement, une étape franchie pour la ville de Montréal en 2016 \parencite{ville_de_montreal_politique_2016}. Cela étant dit, il n'existe à l'heure actuelle pas d'inventaire de la quantité de stationnement disponible, de sa tarification et de la variation temporelle de cette offre. Cette section présentera certains des enjeux relatifs à la mise en place d'un tel inventaire et reprend des éléments de \parencite{bourdeau_methodologie_2014} qui a tenté un inventaire similaire pour la région de Montréal.\par
 
 \subsection{Variabilité de l'objet}
-Malgré les définitions posées à la section \ref{sec:typologie_stationnement}, l'objet stationnement peut varier énormément dans le temps et l'espace. D'une part, l'augmentation de la taille des voitures \hl{citation} va avoir la tendance à réduire le nombre de véhicules entreposables. De l'autre, les variations de capacité dans le temps, du fait de l'interdiction règlementaire, de la création de stationnements impromptus sur des terrains privés pour gérer des pointes ou du fait de l'accumulation de débris peut aussi faire varier les quantités de stationnement. D'autre part, la diversité de types rend la collecte de données difficile.
+Malgré les définitions posées à la section \ref{sec:typologie_stationnement}, l'objet stationnement peut varier énormément dans le temps et l'espace. D'une part, l'augmentation de la taille des voitures \parencite{pineau_tendances_2023} va réduire le nombre de véhicules qu'il est possible d'entreposer à superficie constante. De l'autre, les variations de capacité dans le temps, du fait de l'interdiction réglementaire, de la création de stationnements impromptus sur des terrains privés pour gérer des pointes ou du fait de l'accumulation de débris peuvent aussi faire varier les quantités de stationnement. 
 
 
 \subsection{Données}
 
-L'un des principaux problèmes à la mise en place d'un inventaire relate aux données. Des données directes sur l'offre de stationnement existent sous forme directe (plans de constructions, comptages) ou indirectes (panneaux de stationnements, données sur les bornes fontaines et les entrées charretières). Des données sur l'utilisation de stationnement existent aussi sous forme directe(relevés de transactions de parcomètres) ou indirectes(résultats d'enquête OD).\par
-La disponibilité, la complétude, la précision et l'hétérogénéité des formats forment des barrières. D'autre part, des besoins variables d'agrégation pour différentes utilisations de la donnée rend une procédure universelle de traitement et de stockage difficile à élaboration. Ces facteurs rendent difficiles la reddition d'un portrait juste et adaptée aux besoins d'une intervention, soit elle politique, de terrain ou académique.
+L'un des principaux problèmes à la mise en place d'un inventaire relate aux données. Des données sur l'offre de stationnement existent sous forme directe (plans de constructions, comptages) ou indirectes (panneaux de stationnements, données sur les bornes fontaines et les entrées charretières, codes d'urbanisme). Des données sur l'utilisation de stationnement existent aussi sous forme directe(relevés de transactions de parcomètres) ou indirectes(résultats d'enquête OD).\par
+La disponibilité, la complétude, la précision et l'hétérogénéité des formats forment des barrières à l'exploitation des données qui existent. D'autre part, des besoins variables d'agrégation pour différentes utilisations de la donnée rendent une procédure universelle de traitement et de stockage difficile à élaborer. Un portrait juste et adapté aux besoins d'une intervention, soit elle politique, de terrain ou académique, est donc difficile à rendre.
 
 \subsection{Enjeux}
 
-\textcite{Bourdeau:MethodologieAnalyse:2014} mentionne les enjeux reliés à la provision de  stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est perçu comme un enjeu de taille dans l'espace médiatique et politique, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, les coûts pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phages} \fg{} ainsi qu la dilution de la base foncière censée payer ces infrastructures sont une double pénalité pour les finances des municipalités. 
+\textcite{bourdeau_methodologie_2014} mentionne les enjeux reliés à la provision de  stationnement et ses effets sur la mobilité. À cela s'ajoutent trois formes d'arbitrage; une dimension spatiale entre différentes formes de mobilités qui sont en compétition pour un espace limité, particulièrement dans les milieux urbains denses avec un cadre bâti patrimonial et des besoins croissants sur ce même espace ; la deuxième est politique où l'offre de stationnement est perçue comme un enjeu de taille dans l'espace politique \parencite{mattioli_political_2020,button_political_2006}, sans réellement que le débat ne soit cadré par des données ; le troisième est économique où la provision de stationnement par mandat gouvernemental réduit la viabilité financière de projets de construction du fait de la quantité de terre et de construction supplémentaire imposée par ces mandats. De plus, les coûts pour les infrastructures routières qui doivent contourner ces stationnements \og{spatio-phages} \fg{} ainsi que la dilution de la base foncière censée payer ces infrastructures sont une double pénalité pour les finances des municipalités. 
 %%% 
 % ETAT FINAL DESIRE
 %%%%%
 
 
-\section{L'outil d'analyse du stationnement idéal}
-Cette section va décrire une méthodologie d'analyse qui pourrait être utilisé par un praticien pour évaluer le stationnement, ces effets sur la mobilité et les externalités qui y sont reliés. Deux grands types d'analyses sont possible: un diagnostic de la situation actuelle et l'évaluation de changements de politiques sur la mobilité des personnes et des marchandises ainsi que les externalités qui y sont reliées. Ce mémoire n'a pas pour but de faire l'ensemble de l'analyse mais cette section veut établir un cadre d'analyse global et illustrer les chaînons manquants actuels et où il contribuera à cet ensemble global.\par
+%\section{L'outil d'analyse du stationnement idéal}
+%Cette section va décrire une méthodologie d'analyse qui pourrait être utilisé par un praticien pour évaluer le stationnement, ces effets sur la mobilité et les externalités qui y sont reliés. Deux grands types d'analyses sont possible: un diagnostic de la situation actuelle et l'évaluation de changements de politiques sur la mobilité des personnes et des marchandises ainsi que les externalités qui y sont reliées. Ce mémoire n'a pas pour but de faire l'ensemble de l'analyse mais cette section veut établir un cadre d'analyse global et illustrer les chaînons manquants actuels et où il contribuera à cet ensemble global.\par
 
-\hl{!!!!! À COMPLÉTER !!!!!}
+%\hl{!!!!! À COMPLÉTER !!!!!}
     %\subsection{Indicateurs pertinents}
 
     %\subsection{Diagnostique de l'état actuel}
@@ -123,13 +123,9 @@ Cette thèse aura pour but de développer un système d'information capable de g
 \item Définir une structure de base de données qui permet d'inventorier le stationnement et de représenter visuellement la capacité de stationnement sur le territoire
 \item Valider les différentes méthodes d'estimations contre une réalité terrain pour valider la significativité statistique des estimés sur une variété de contexte géographiques et d'utilisation du sol
 \item Développer un interface facile d'utilisation qui permet à un praticien d'évaluer la capacité et de corriger les estimés au besoin
-\item Développer la structure d'un interface de programmation d'application pour que d'autres logiciels puisse valoriser la donnée dans les études de la mobilité
+\item Développer la structure d'un interface de programmation d'application pour que d'autres logiciels puissent valoriser la donnée dans les études de la mobilité
 \end{enumerate}
-En plus des objectifs principaux, deux objectifs étendus, désirables mais pas indispensables au mémoire sont disposés ci-dessous:
-\begin{enumerate}
-\item Adapter la méthode de \textcite{Bourdeau:MethodologieAnalyse:2014} au contexte de la capitale.
-\item Établir des indicateurs d'utilisation de stationnement basé sur l'inventaire de stationnement et les données d'enquête origine-Destination en modifiant la méthodologie définie par \textcite{Diallo:MethodologyParking:2015}.
-\end{enumerate}
+
 %%
 %% PLAN DU MEMOIRE / THESIS OUTLINE
 %%
