--- a/06-2-Revue-stat-inventaire.tex
+++ b/06-2-Revue-stat-inventaire.tex
@@ -2,14 +2,14 @@
   La revue de littérature a révélé plusieurs différentes méthodologies utilisées pour recenser l'offre de stationnement hors rue et sur rue. 
 
   \subsection{Hors-Rue}
-  \textcite{Chester:ParkingInfrastructure:2015} utilisent des données basées sur le rôle foncier, un modèle de croissance de la construction et des données de recensement croisées avec les minimums de stationnement issus des codes d'urbanisme pour inférer la capacité de stationnement de la région de Los Angeles depuis les années '50. Les auteurs indiquent qu'ils estiment que les minimums mis en place sont probablement le nombre de places construites du fait de la valeur marginale basse de la place de stationnement par rapport à la construction de bâtiments. \citeauthor{Chester:InventoryingSan:2022} estime la capacité de stationnement en utilisant une méthode similaire basée sur les codes d'urbanismes et les données foncières pour la région de San Francisco \parencite{Chester:InventoryingSan:2022} et Phoenix \parencite{Hoehne:ValleySundrenched:2019}. \textcite{Scharnhorst:QuantifiedParking:2018} fait pour sa part un inventaire de 5 régions métropolitaines aux États-Unis utilisant encore une fois des méthodes basées sur les codes d'urbanisme en vigueur à la période de construction. Ce dernier n'est cependant pas revu par les pairs. \par 
-  Il est important de noter que ce type d'inventaire fait l'hypothèse que les promoteurs immobiliers construisent le minimum de places possibles. \textcite{Stangl:ParkingLots:2019} indique que les promoteurs immobiliers ne respectent pas nécessairement cette hypothèse car leur but est de minimiser les risques d'invendus et leurs perceptions ne sont pas alignées avec l'utilisation réelle des stationnements. Ironiquement, les développeurs ont tendance à bâtir plus de stationnements dans des voisinages de typologie \og{Old Urban} \fg{} \parencite{Voulgaris:SynergisticNeighborhood:2017} alors que ce sont précisément les quartiers où les gens ont une plus faible propension à conduire. \textcite{Stangl:ParkingLots:2019} comporte des entrevues avec des promoteurs immobiliers qui illustrent l'effet structurant des minimums de stationnement sur les décisions de construction, mais aussi certains biais dans la prise de décision vis-a-vis du stationnement.
+  \textcite{chester_parking_2015} utilisent des données basées sur le rôle foncier, un modèle de croissance de la construction et des données de recensement croisées avec les minimums de stationnement issus des codes d'urbanisme pour inférer la capacité de stationnement de la région de Los Angeles depuis les années '50. Les auteurs indiquent qu'ils estiment que les minimums mis en place sont probablement le nombre de places construites du fait de la valeur marginale basse de la place de stationnement par rapport à la construction de bâtiments. \citeauthor{chester_inventorying_2022} estime la capacité de stationnement en utilisant une méthode similaire basée sur les codes d'urbanisme et les données foncières pour la région de San Francisco \parencite{chester_inventorying_2022} et Phoenix \parencite{hoehne_valley_2019}. \textcite{scharnhorst_quantified_2018} fait pour sa part un inventaire de 5 régions métropolitaines aux États-Unis utilisant encore une fois des méthodes basées sur les codes d'urbanisme en vigueur à la période de construction. Ce dernier n'est cependant pas revu par les pairs. \par 
+  Il est important de noter que ce type d'inventaire fait l'hypothèse que les promoteurs immobiliers construisent le minimum de places possibles. \textcite{stangl_parking_2019} indique que les promoteurs immobiliers ne respectent pas nécessairement cette hypothèse car leur but est de minimiser les risques d'invendus et leurs perceptions ne sont pas alignées avec l'utilisation réelle des stationnements. Ironiquement, les développeurs ont tendance à bâtir plus de stationnements dans des voisinages de typologie \og{Old Urban} \fg{} \parencite{voulgaris_synergistic_2017} alors que ce sont précisément les quartiers où les gens ont une plus faible propension à conduire. \textcite{stangl_parking_2019} comporte des entrevues avec des promoteurs immobiliers qui illustrent l'effet structurant des minimums de stationnement sur les décisions de construction, mais aussi certains biais dans la prise de décision vis-a-vis du stationnement.
 
   \subsection{Sur-rue}
-  \textcite{Bourdeau:MethodologieAnalyse:2014} détaille une méthode d'inventaire de places de stationnement sur rue basé sur l'utilisation des données de bords de réseau routiers, de panneaux de stationnement et d'archive cadastrale indiquant les entrées charretières pour déterminer le nombre de places de stationnements sur rue. Cette approche permet de mieux identifier les limites règlementaires et temporelles que les approches utilisées par \textcite{Chester:InventoryingSan:2022} et \textcite{Scharnhorst:QuantifiedParking:2018}. En effet, ces dernières n'enlèvent de la capacité que sur une base de moyennes pour les intersections, arrêts de bus sans prendre en compte la géométrie locale ou des contraintes qui ne peuvent être adéquatement capturées par \ac{OSM}. Dans les 2 cas ci-haut, l'inventaire sur rue est fait avec des largeurs d'intersection moyenne, avec des retraits pour les entrées et la règlementation utilisant des heuristiques plutôt que la réalité du terrain. \par
+  \textcite{bourdeau_methodologie_2014} détaille une méthode d'inventaire de places de stationnement sur rue basé sur l'utilisation des données de bords de réseau routiers, de panneaux de stationnement et d'archive cadastrale indiquant les entrées charretières pour déterminer le nombre de places de stationnements sur rue. Cette approche permet de mieux identifier les limites réglementaires et temporelles que les approches utilisées par \textcite{chester_inventorying_2022} et \textcite{scharnhorst_quantified_2018}. En effet, ces dernières n'enlèvent de la capacité que sur une base de moyennes pour les intersections, arrêts de bus sans prendre en compte la géométrie locale ou des contraintes qui ne peuvent être adéquatement capturées par \ac{OSM}. Dans les 2 cas ci-haut, l'inventaire sur rue est fait avec des largeurs d'intersection moyenne, avec des retraits pour les entrées et la réglementation utilisant des heuristiques plutôt que la réalité du terrain. \par
 \section{Méthodes d'inventaire basées sur l'imagerie aérienne sans apprentissage machine}
-  \textcite{Akbari:AnalyzingLand:2003} utilisent des orthophotos en couleur avec une résolution de 0.3m pour identifier le pourcentage d'utilisation des sols de différentes surfaces (bâtiments, verdure, stationnements, etc.). Une approche de Monte-Carlo est utilisée où un sous-ensemble de pixels se voit assigner une utilisation des sols manuellement pour chaque sous-ensemble de photos basé principalement sur la couleur du pixel. Le nombre de pixels manuellement identifié est validé contre la convergence du pourcentage d'utilisation des sols jusqu'à un seuil de 1\%. Une fois ce sous-ensemble identifié, l'utilisation des sols est assignée à l'ensemble des pixels de l'orthophoto. \citeauthor{Akbari:AnalyzingLand:2003} ne font pas de distinction entre la voirie et le stationnement sur rue.\par
-  \textcite{Davis:EstimatingParking:2010} recensent un sous ensemble de codes postaux manuellement avant d'utiliser une régression pour estimer le stationnement sur l'ensemble d'un territoire. Une régression basée sur une codification d'\og{urbanité} \fg{} des codes postaux issue du recensement est ensuite utilisée pour inférer l'offre de stationnement hors rue non résidentielle sur un territoire s'étendant sur 4 états dans le Midwest des États-Unis. La méthode est validée sur un sous-ensemble de données qui n'est pas utilisé pour la régression et les auteurs constatent une erreur de 5\% entre la valeur inférée par régression et la valeur mesurée manuellement pour le sous-ensemble de contrôle. Comme l'étude précédente, cette étude n'inclut que le stationnement hors rue. \par
+  \textcite{akbari_analyzing_2003} utilisent des orthophotos en couleur avec une résolution de 0.3m pour identifier le pourcentage d'utilisation des sols de différentes surfaces (bâtiments, verdure, stationnements, etc.). Une approche de Monte-Carlo est utilisée où un sous-ensemble de pixels se voit assigner une utilisation des sols manuellement pour chaque sous-ensemble de photos basé principalement sur la couleur du pixel. Le nombre de pixels manuellement identifié est validé contre la convergence du pourcentage d'utilisation des sols jusqu'à un seuil de 1\%. Une fois ce sous-ensemble identifié, l'utilisation des sols est assignée à l'ensemble des pixels de l'orthophoto. \citeauthor{akbari_analyzing_2003} ne font pas de distinction entre la voirie et le stationnement sur rue.\par
+  \textcite{davis_estimating_2010} recensent un sous ensemble de codes postaux manuellement avant d'utiliser une régression pour estimer le stationnement sur l'ensemble d'un territoire. Une régression basée sur une codification d'\og{urbanité} \fg{} des codes postaux issue du recensement est ensuite utilisée pour inférer l'offre de stationnement hors rue non résidentielle sur un territoire s'étendant sur 4 états dans le Midwest des États-Unis. La méthode est validée sur un sous-ensemble de données qui n'est pas utilisé pour la régression et les auteurs constatent une erreur de 5\% entre la valeur inférée par régression et la valeur mesurée manuellement pour le sous-ensemble de contrôle. Comme l'étude précédente, cette étude n'inclut que le stationnement hors rue. \par
 \section{Méthodes d'inventaire basées sur l'imagerie aérienne et l'apprentissage machine}
-  L'augmentation de la capacité de calcul numérique et la démocratisation des méthodes d'apprentissage machine a mené \textcite{Hellekes:ParkingSpace:2023} à utiliser la photographie aérienne et des données \ac{OSM} pour identifier les aires de stationnement à l'aide d'une méthode Dense-U-Net. D'autre part, les auteurs utilisent plusieurs ensembles d'orthophotos d'une même zone et les données \ac{OSM} pour identifier les zones de stationnement non démarquées, intermittentes ou informelles comme les trottoirs et jardins. Des méthodes de régression Bayesienne sont utilisées pour introduire explicitement l'incertitude dans la reconnaissance de l'objet de stationnement. \textcite{Henry:CitywideEstimation:2021} est un autre article par la même équipe de recherche qui donne un aperçu des différentes méthodes d'apprentissage machine utilisées jusqu'à présent pour identifier des objets dans un périmètre urbain. D'autre part, ils indiquent que la méthodologie de fusion choisie influe sur les résultats en fonction du type d'objet reconnu. Par exemple, l'inclusion des données \ac{OSM} améliore l'identification de routes et de voies d'accès, mais nuit à l'identification de stationnement.  \par
-  \textcite{Yin:ContextenrichedSatellite:2022} est un autre article portant sur l'inventaire de stationnement en utilisant des méthodes d'apprentissage machine pour détecter des stationnements. En plus d'utiliser l'imagerie satellite, les auteurs utilisent des données \ac{OSM} pour ajouter du contexte et voient une amélioration la métrique de de détection \ac{IoU} d'environ 2.5\% en ajouant 2 dimensions supplémentaires au tenseur d'images. Les auteurs on en effet pris les couches de bâtiments et de routes d'\ac{OSM} pour donner plus de contexte aux algorithmes d'aprrentissage machines. Les éléments OSM ont généré 15 dimensions supplémentaires au tenseur qui ont été réduit à 3 par convolution et avec une activation en utilisant une fonction tanh. Ce résultat est ensuite additionné au 3 dimensions d'une image RGB. Ils ont par la suite étalloné leur méthode avec plusieurs algorithmes de segmentation d'image: U-Net, U-Net++, LinkNet, D-LinkNet, FPN, PAN, DeepLab v3 et Deeplab v3+. Les algorithmes ont été testés avec et sans contexte et les auteurs constatent que l'algorithme DeepLab v3 performe le mieux particulièrement sur les stationnement de plus petite taille.
+  L'augmentation de la capacité de calcul numérique et la démocratisation des méthodes d'apprentissage machine a mené \textcite{hellekes_parking_2023} à utiliser la photographie aérienne et des données \ac{OSM} pour identifier les aires de stationnement à l'aide d'une méthode Dense-U-Net. D'autre part, les auteurs utilisent plusieurs ensembles d'orthophotos d'une même zone et les données \ac{OSM} pour identifier les zones de stationnement non démarquées, intermittentes ou informelles comme les trottoirs et jardins. Des méthodes de régression Bayesienne sont utilisées pour introduire explicitement l'incertitude dans la reconnaissance de l'objet de stationnement. \textcite{henry_citywide_2021} est un autre article par la même équipe de recherche qui donne un aperçu des différentes méthodes d'apprentissage machine utilisées jusqu'à présent pour identifier des objets dans un périmètre urbain. D'autre part, ils indiquent que la méthodologie de fusion choisie influe sur les résultats en fonction du type d'objet reconnu. Par exemple, l'inclusion des données \ac{OSM} améliore l'identification de routes et de voies d'accès, mais nuit à l'identification de stationnement.  \par
+  \textcite{yin_context-enriched_2022} est un autre article portant sur l'inventaire de stationnement en utilisant des méthodes d'apprentissage machine pour détecter des stationnements. En plus d'utiliser l'imagerie satellite, les auteurs utilisent des données \ac{OSM} pour ajouter du contexte et voient une amélioration la métrique de de détection \ac{IoU} d'environ 2.5\% en ajoutant 2 dimensions supplémentaires au tenseur d'images. Les auteurs on en effet pris les couches de bâtiments et de routes d'\ac{OSM} pour donner plus de contexte aux algorithmes d'apprentissage machine. Les éléments \ac{OSM} ont généré 15 dimensions supplémentaires au tenseur qui ont été réduit à 3 par convolution et avec une activation en utilisant une fonction tanh. Ce résultat est ensuite additionné au 3 dimensions d'une image RGB. Ils ont par la suite étalloné leur méthode avec plusieurs algorithmes de segmentation d'image: U-Net, U-Net++, LinkNet, D-LinkNet, FPN, PAN, DeepLab v3 et Deeplab v3+. Les algorithmes ont été testés avec et sans contexte et les auteurs constatent que l'algorithme DeepLab v3 performe le mieux particulièrement sur les stationnement de plus petite taille.
